--- a/static/style.css
+++ b/static/style.css
@@ -21,7 +21,7 @@ h1 {
 	height: 100px;
 	position: fixed;
 }
-h3 {
+.query h3 {
 	margin-bottom: -10px;
 }
 
@@ -49,6 +49,14 @@ input[type = text] {
 
 }
 
+input[type = file] {
+	width: 80%;
+	margin: 20px;
+	padding: 10px;
+	box-sizing: border-box;
+	border-radius: 10px;
+}
+
 input[type = submit] {
 	width: 100px;
 	margin: 10px 5px;
@@ -62,23 +70,32 @@ input:hover[type=submit] {
 	box-shadow: 10px 10px 5px #505050;
 }
 
-#download_link {
-	text-align: center;
-	
-}
-
 img {
 	width: 50%;
 	height: auto;
 }
-p {
-	font-size: 10px;
-	color: #585858;
-}
+
 
 .actions {
 	border:1px solid black;
 	padding: 10px 0px;
 	margin: 40px 0px;
 	background-color: 	#787878;
+}
+
+.history {
+	width: 50%;
+	display: inline-block;
+	text-align: center;
+	list-style-position: inside;
+}
+
+p {
+	font-size: 12px;
+	color: black;
+}
+
+p.footer {
+	font-size: 10px;
+	color: #585858;
 }
